# nft

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .prettierignore  .tas.yml  .vite-migration-salvage.patch  Cargo.toml  LICENSE  azure-pipelines.yml  azure-prepare.js  clippy.toml  deny.toml  example.js  jest.config.js  lighthouse.js  node-12-prepare.js  node-file-trace.d.ts  package-lock.json  package-lock.json.backup  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prepare-install.js  readme.md  release.config.js  rustfmt.toml  tea  tsconfig.json  vite.config.ts  windows-prepare.js
.circleci/: config.yml
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: compare-bench.mjs
.github/workflows/: baseline.yml  benchmark.yml  ci.yml  codeql.yml  hadolint.yml  jekyll-gh-pages.yml  lintr.yml  pr.yml  publish-crates.yml  publish.yml  summary.yml
compat/: README.md  baseline.json  bench.mjs  history.ndjson  run.mjs
compat/misskey/: .gitignore  README.md  RESULTS.md  bench.mjs  lib.mjs  package.json  setup.mjs  validate.mjs
crates/nftrs_analyzer/: Cargo.toml
crates/nftrs_analyzer/src/: lib.rs  special_cases.rs  static_eval.rs  wrappers.rs
crates/nftrs_core/: Cargo.toml
crates/nftrs_core/benches/: trace.rs
crates/nftrs_core/src/: lib.rs
crates/nftrs_fs/: Cargo.toml
crates/nftrs_fs/src/: lib.rs
crates/nftrs_napi/: Cargo.toml  cli.js  index.d.ts  index.js  package.json  pnpm-lock.yaml
crates/nftrs_napi/src/: lib.rs
crates/nftrs_profiler/: Cargo.toml
crates/nftrs_profiler/src/: alloc.rs  lib.rs  report.rs  scope.rs
crates/nftrs_resolver/: Cargo.toml
crates/nftrs_resolver/src/: lib.rs
docs/: MISSKEY_VALIDATION.md  OPTIMIZE.md  PUBLISHING.md  ROADMAP.md
publish/: package.json  pnpm-lock.yaml
scripts/: release.mjs  setup-trusted-publishing.sh
src/: analyze.js  analyze.ts  cli.js  cli.ts  fs.ts  index.ts  node-file-trace.d.ts  node-file-trace.js  node-file-trace.ts  resolve-dependency.js  resolve-dependency.ts  test.ts  types.ts
src/utils/: acorn-static-class-features.js  ast-helpers.js  ast-helpers.ts  binary-locators.js  binary-locators.ts  cache-file-io.ts  get-package-base.js  get-package-base.ts  interop-require.js  interop-require.ts  is-error.ts  node-gyp-build-v3.ts  node-version.ts  safe-stringify.ts  sharedlib-emit.js  sharedlib-emit.ts  special-cases.js  special-cases.ts  static-eval.js  static-eval.ts  types.ts  wrappers.js  wrappers.ts
test/: cli.test.js  ecmascript.test.js  fs-concurrency.test.js  integration.test.js  unit.test.js  url-input.test.js
test/ecmascript/: README.md  data-es2016plus.js  data-es5.js  data-esnext.js  update-all-data.js  update-all-data.mjs
test/fixtures/: es-module.js  test.js  test.ts
test/fixtures/yarn-pnp/: .yarnrc.yml  package.json  trace.js
test/integration/: apollo-upload-client.js  apollo.js  auth0.js  axios.js  bull.js  core-js.js  datadog-pprof.js  dogfood.js  ffmpeg-static.js  firebase.js  geoip-lite.js  isomorphic-unfetch.js  lighthouse.js  module-register.mjs  node-pre-gyp.js  otel-api.js  playwright-core-esm.mjs  playwright.js  quirrel.js  request.js  serialport.js  sharp-pnpm.js  sharp.js  shiki.js  typescript.js  vercel-edge-config-esm.js  vercel-edge-config-esm.mjs  vue.js  zeromq.js
test/unit/@datadog-pprof/: input.js  output.js
test/unit/a-url-error/: input.js
test/unit/amd-disable/: output.js
test/unit/array-emission/: input.js  output.js
test/unit/array-holes/: input.js  output.js
test/unit/asset-class-constructor-directory/: input.js  output.js
test/unit/asset-conditional/: input.js  output.js
test/unit/asset-fs-array-expr/: input.js  output.js
test/unit/asset-fs-array-expr-node-prefix/: output.js
test/unit/asset-fs-array-expr-node-require/: input.js  output.js
test/unit/asset-fs-extra/: input.js  output.js
test/unit/asset-fs-inline-path-babel/: input.js  output.js
test/unit/asset-fs-inline-path-enc-es/: output.js
test/unit/asset-fs-inline-path-enc-es-2/: output.js
test/unit/asset-fs-inline-path-enc-es-3/: output.js
test/unit/asset-fs-inline-path-enc-es-4/: output.js
test/unit/asset-fs-inline-path-enc-es-5/: input.js  output.js
test/unit/asset-fs-inline-path-enc-es-node-import/: output.js
test/unit/asset-fs-inline-path-enc-es-node-prefix/: output.js
test/unit/asset-fs-inline-path-shadow/: output.js
test/unit/asset-fs-inline-path-ts/: input.js  output.js
test/unit/asset-fs-inline-path-ts-no-interop/: input.js  output.js
test/unit/asset-fs-inline-tpl/: output.js
test/unit/asset-fs-inlining/: output.js
test/unit/asset-fs-inlining-multi/: output.js
test/unit/asset-fs-logical/: output.js
test/unit/asset-graceful-fs/: input.js  output.js
test/unit/asset-node-require/: input.js  output.js
test/unit/asset-package-json/: output.js
test/unit/asset-symlink/: asset.txt  input.js  output.js
test/unit/basic-analysis-require/: output.js
test/unit/browser-remappings/: output.js
test/unit/browser-remappings-disabled/: output.js  test-opts.json
test/unit/browser-remappings-false/: input.js  output.js
test/unit/browser-remappings-malformed/: output.js
test/unit/browser-remappings-malformed2/: output.js
test/unit/browser-remappings-string/: output.js
test/unit/browser-remappings-undefined/: .gitignore  output.js  test-opts.json
test/unit/browserify/: output.js
test/unit/browserify-minify/: input.js  output.js
test/unit/browserify-uglify/: input.js  output.js
test/unit/cjs-querystring/: input.js  output.js
test/unit/class-static/: input.js  output.js
test/unit/datadog-pprof-node-gyp/: output.js
test/unit/depth/: output-depth-0.js  output-depth-1.js  output-depth-2.js  output.js  (+1 more)
test/unit/depth-0/: child-1.js  child-2.js  child-3.js  output.js  test-opts.json
test/unit/depth-1/: output.js  test-opts.json
test/unit/depth-2/: output.js
test/unit/depth-3/: input.js  output.js
tools/optimize/: .gitignore  README.md  compare.mjs  lib.mjs  loop.mjs  measure.mjs  selftest.mjs
(+363 files in other folders)
