[package]
name = "nftrs_fs"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cached filesystem layer (readFile/stat/readlink + realpath) for nftrs"

[lints]
workspace = true

[dependencies]
rustc-hash = { workspace = true }
compact_str = { workspace = true }
