[package]
name = "nftrs_napi"
version.workspace = true
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Node.js bindings for nftrs (@nftrs/core)"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nftrs_core = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
