[package]
name = "nftrs_profiler"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dependency-free profiling primitives (counting allocator, spans, reports) for nftrs"

[lints]
workspace = true

[dependencies]
