[package]
name = "nftrs_resolver"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Node.js module resolution for nftrs, built on oxc_resolver"

[lints]
workspace = true

[dependencies]
nftrs_fs = { workspace = true }
oxc_resolver = { workspace = true }
thiserror = { workspace = true }
