[package]
name = "nftrs_resolver"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Node.js module resolution for nftrs (exports/imports/conditions, browser remap, paths)"

[lints]
workspace = true

[dependencies]
nftrs_fs = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
phf = { workspace = true }
compact_str = { workspace = true }
